terraformer/code/internet_gateway.tf
resource "aws_internet_gateway" "tfer--igw-0022f56829cb55457" {
  vpc_id = "vpc-0963d0caf73279688"
}
