terraformer/code/launch_template.tf
resource "aws_launch_template" "tfer--eks-f4c6ed57-17e4-86b6-ceb8-7a7b43df5add" {
  block_device_mappings {
    device_name = "/dev/xvda"

    ebs {
      delete_on_termination = "true"
      iops                  = "0"
      volume_size           = "20"
      volume_type           = "gp2"
    }
  }

  default_version         = "1"
  disable_api_stop        = "false"
  disable_api_termination = "false"

  iam_instance_profile {
    name = "eks-f4c6ed57-17e4-86b6-ceb8-7a7b43df5add"
  }

  image_id      = "ami-0ab84face2beaa17b"
  instance_type = "t3a.medium"

  metadata_options {
    http_put_response_hop_limit = "2"
  }

  name = "eks-f4c6ed57-17e4-86b6-ceb8-7a7b43df5add"

  network_interfaces {
    device_index       = "0"
    ipv4_address_count = "0"
    ipv4_prefix_count  = "0"
    ipv6_address_count = "0"
    ipv6_prefix_count  = "0"
    network_card_index = "0"
    security_groups    = ["sg-0ab9a8f14ad627075"]
  }

  tags = {
    "eks:cluster-name"   = "eks-cluster"
    "eks:nodegroup-name" = "eks-nodegroup"
  }

  tags_all = {
    "eks:cluster-name"   = "eks-cluster"
    "eks:nodegroup-name" = "eks-nodegroup"
  }

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVVJDVkVORFFXVXlaMEYzU1VKQlowbEpZbVYxY210Q09YTmlaVlYzUkZGWlNrdHZXa2xvZG1OT1FWRkZURUpSUVhkR1ZFVlVUVUpGUjBFeFZVVUtRWGhOUzJFelZtbGFXRXAxV2xoU2JHTjZRV1ZHZHpCNVRrUkJlVTFxVVhoTlJFa3hUa1JhWVVaM01IcE9SRUY1VFdwRmVFMUVUWGRPUkZwaFRVS [...]
}

resource "aws_launch_template" "launch-template" {
  block_device_mappings {
    device_name = "/dev/xvda"

    ebs {
      delete_on_termination = "true"
      iops                  = "0"
      volume_size           = "20"
      volume_type           = "gp2"
    }
  }

  default_version         = "1"
  disable_api_stop        = "false"
  disable_api_termination = "false"

  # iam_instance_profile {
  #   name = "eks-f4c6ed57-17e4-86b6-ceb8-7a7b43df5add"
  # }

  image_id      = "ami-0ab84face2beaa17b"
  instance_type = "t3a.medium"

  metadata_options {
    http_put_response_hop_limit = "2"
  }

  name = "launch-template"

  network_interfaces {
    device_index       = "0"
    ipv4_address_count = "0"
    ipv4_prefix_count  = "0"
    ipv6_address_count = "0"
    ipv6_prefix_count  = "0"
    network_card_index = "0"
    security_groups    = ["sg-0ab9a8f14ad627075"]
  }

  tags = {
    "eks:cluster-name"   = "eks-cluster"
    "eks:nodegroup-name" = "eks-nodegroup"
  }

  tags_all = {
    "eks:cluster-name"   = "eks-cluster"
    "eks:nodegroup-name" = "eks-nodegroup"
  }

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVVJDVkVORFFXVXlaMEYzU1VKQlowbEpZbVYxY210Q09YTmlaVlYzUkZGWlNrdHZXa2xvZG1OT1FWRkZURUpSUVhkR1ZFVlVUVUpGUjBFeFZVVUtRWGhOUzJFelZtbGFXRXAxV2xoU2JHTjZRV1ZHZHpCNVRrUkJlVTFxVVhoTlJFa3hUa1JhWVVaM01IcE9SRUY1VFdwRmVFMUVUWGRPUkZwaFRVS [...]
}
